[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/moons/pixil-frame-0 (3).png" type="Texture" id=3]
[ext_resource path="res://Spaceship2.gd" type="Script" id=4]
[ext_resource path="res://assets/spaceship/Spaceship_launch.png" type="Texture" id=5]
[ext_resource path="res://assets/planets/Planet1.png" type="Texture" id=6]
[ext_resource path="res://assets/spaceship/SpaceshipSmall.png" type="Texture" id=7]
[ext_resource path="res://assets/spaceship/Spaceship-1.png.png" type="Texture" id=11]
[ext_resource path="res://assets/blank.png" type="Texture" id=12]
[ext_resource path="res://assets/spaceship/SpaceshipMed.png" type="Texture" id=13]
[ext_resource path="res://Level2.gd" type="Script" id=14]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.6467
height = 29.3648

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 140, 140 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 140, 0, 140, 140 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 280, 0, 140, 140 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 140, 140, 140 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 140, 140, 140, 140 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 280, 140, 140, 140 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 280, 140, 140 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 140, 280, 140, 140 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 280, 280, 140, 140 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "static",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "launch",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 12 ) ],
"loop": false,
"name": "land",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 160.68

[sub_resource type="CircleShape2D" id=13]
radius = 33.6668

[sub_resource type="CircleShape2D" id=14]
radius = 119.54

[sub_resource type="CircleShape2D" id=15]
radius = 31.223

[sub_resource type="CircleShape2D" id=16]
radius = 93.4626

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "static",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 21.7034

[sub_resource type="DynamicFont" id=19]
size = 25
font_data = ExtResource( 1 )

[node name="Level2" type="Node2D"]
position = Vector2( 0.891068, 0.891075 )
script = ExtResource( 14 )

[node name="Spaceship" type="RigidBody2D" parent="."]
position = Vector2( 614.787, 525.045 )
contacts_reported = 10
contact_monitor = true
can_sleep = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spaceship"]
rotation = -0.785397
shape = SubResource( 1 )

[node name="Spaceship_sprite" type="AnimatedSprite" parent="Spaceship"]
rotation = -0.820305
scale = Vector2( 0.370018, 0.491259 )
frames = SubResource( 11 )
animation = "static"

[node name="Planet" type="Area2D" parent="."]
position = Vector2( 546.143, 349.854 )
rotation = 0.436332
space_override = 1
gravity_point = true
gravity_distance_scale = 0.01
gravity_vec = Vector2( 0, 0 )
gravity = 40.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet"]
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="Planet"]
position = Vector2( 1.13794, 0.357662 )
scale = Vector2( 0.663505, 0.673781 )
texture = ExtResource( 6 )

[node name="Crash" type="StaticBody2D" parent="Planet"]

[node name="CrashArea" type="CollisionShape2D" parent="Planet/Crash"]
shape = SubResource( 13 )

[node name="Planet2" type="Area2D" parent="."]
position = Vector2( 362.479, 302.088 )
rotation = -0.436332
space_override = 1
gravity_point = true
gravity_distance_scale = 0.01
gravity_vec = Vector2( 0, 0 )
gravity = 40.0
linear_damp = 0.0
angular_damp = 0.0
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet2"]
shape = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="Planet2"]
position = Vector2( -0.0823364, 0.537796 )
scale = Vector2( 0.61524, 0.616414 )
texture = ExtResource( 6 )

[node name="Crash" type="StaticBody2D" parent="Planet2"]

[node name="CrashArea" type="CollisionShape2D" parent="Planet2/Crash"]
shape = SubResource( 15 )

[node name="Moon" type="Area2D" parent="."]
position = Vector2( 352.631, 54.6103 )
space_override = 1
gravity_point = true
gravity_distance_scale = 0.01
gravity_vec = Vector2( 0, 0 )
gravity = 25.0
linear_damp = 0.0
angular_damp = 0.0
priority = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moon"]
shape = SubResource( 16 )

[node name="Sprite" type="AnimatedSprite" parent="Moon"]
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 17 )
animation = "static"

[node name="Goal" type="StaticBody2D" parent="Moon"]

[node name="GoalCollision" type="CollisionShape2D" parent="Moon/Goal"]
position = Vector2( 6.10352e-05, 0 )
shape = SubResource( 18 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Sprite2" type="Sprite" parent="HUD/PopupDialog" index="3"]
position = Vector2( 224.749, 249.109 )
texture = ExtResource( 3 )

[node name="Sprite2" parent="HUD/Menu/ScrollContainer/HBoxContainer/Level1" index="1"]
visible = false

[node name="levelTitle" type="Label" parent="."]
margin_left = 18.9336
margin_top = 12.8605
margin_right = 193.934
margin_bottom = 37.8605
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.713726, 0.25098, 1, 1 )
custom_colors/font_color_shadow = Color( 0.290196, 0.94902, 1, 1 )
text = "LEVEL 2"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Spaceship" to="Spaceship" method="_on_Spaceship2_body_entered"]
[connection signal="input_event" from="Spaceship" to="." method="_on_Spaceship_input_event"]
[connection signal="pressed" from="HUD/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="HUD/PopupDialog/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="text_changed" from="HUD/PopupDialog/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="HUD/TryAgain/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="HUD/Menu/resume" to="." method="_on_resume_pressed"]

[editable path="HUD"]
